--- a/src/components/page.scss
+++ b/src/components/page.scss
@@ -1,8 +1,3 @@
-%content_height {
-  height: calc(100vh - 48px);
-  height: calc(var(--vh, 1vh) * 100 - 48px);
-}
-
 body {
   height: 100vh;
   height: calc(var(--vh, 1vh) * 100);
@@ -11,22 +6,14 @@ body {
 .bx--header {
   position: static;
 }
-.bx--grid {
-  max-width: none;
-  padding: 0;
-}
-.bx--row {
-  margin: 0 !important;
-}
-.bx--row > div {
-  padding: 0 !important;
-}
 
 #stream_container {
-  @extend %content_height;
+  height: calc(100vh - 48px);
+  height: calc(var(--vh, 1vh) * 100 - 48px);
 }
 
-#control {
-  @extend %content_height;
-  background-color: #262626;
+#record_icon {
+  svg {
+    fill: red !important;
+  }
 }
