--- a/src/components/page.scss
+++ b/src/components/page.scss
@@ -12,6 +12,10 @@ body {
   height: calc(var(--vh, 1vh) * 100 - 48px);
 }
 
+#stream_container:focus {
+  outline: none !important;
+}
+
 #record_icon {
   svg {
     fill: red !important;
