--- a/src/components/page.scss
+++ b/src/components/page.scss
@@ -1,3 +1,5 @@
+$video-background-color: #f4f4f4;
+
 body {
   height: 100vh;
   height: calc(var(--vh, 1vh) * 100);
@@ -11,10 +13,10 @@ body {
 #stream_container {
   height: calc(100vh - 48px);
   height: calc(var(--vh, 1vh) * 100 - 48px);
-  background-color: #262626;
+  background-color: $video-background-color;
 
   video {
-    background-color: #262626;
+    background-color: $video-background-color;
   }
 
   video:focus {
