--- a/src/components/page.scss
+++ b/src/components/page.scss
@@ -29,6 +29,14 @@ body {
   }
 }
 
-#record_icon {
-  fill: red !important;
+#stream_button {
+  padding: 12.5px;
+  cursor: pointer;
+  svg {
+    fill: red !important;
+  }
+}
+
+#stream_button:hover {
+  // background-color: red;
 }
