--- a/src/components/page.scss
+++ b/src/components/page.scss
@@ -31,12 +31,12 @@ body {
 
 #stream_button {
   padding: 12.5px;
-  cursor: pointer;
   svg {
     fill: red !important;
   }
 }
 
 #stream_button:hover {
-  // background-color: red;
+  cursor: pointer;
+  // background-color: red !important;
 }
