--- a/src/components/page.scss
+++ b/src/components/page.scss
@@ -31,12 +31,12 @@ body {
 
 .stream_button {
   padding: 12.5px;
-  svg {
-    fill: #da1e28;
-  }
+  // svg {
+  //   fill: #da1e28;
+  // }
 }
 
 .stream_button:hover {
   cursor: pointer;
-  // background-color: red !important;
+  // background-color: #da1e28 !important;
 }
