--- a/src/components/page.scss
+++ b/src/components/page.scss
@@ -29,14 +29,8 @@ body {
   }
 }
 
-.stream_button {
-  padding: 12.5px;
-  // svg {
-  //   fill: #da1e28;
-  // }
-}
-
-.stream_button:hover {
-  cursor: pointer;
-  // background-color: #da1e28 !important;
+.bx--header__action {
+  svg {
+    fill: #da1e28 !important;
+  }
 }
