back to tooltip icon

--- a/src/components/page.scss
+++ b/src/components/page.scss
@@ -31,6 +31,9 @@ body {
 
 .bx--header__action {
   svg {
+    margin: 14px;
     fill: #da1e28 !important;
+    // width: 45px !important;
+    // height: 45px !important;
   }
 }
